Lab 4 tasks implementation