@@ -13,7 +13,7 @@ import java.util.*;
 import java.util.function.Supplier;
 
 public class App {
-    public static String cpuPlayerNickname = "CPU Player";
+    public static final String cpuPlayerNickname = "CPU Player";
 
     public static void main(String[] args) {
         System.out.println("Welcome to my number guessing game!");
@@ -23,15 +23,26 @@ public class App {
         System.out.println();
         Scanner scanner = new Scanner(System.in);
         System.out.println("Would you like to engage in a real-time battle with your friends or test your skills against the AI?");
-        System.out.print("Enter 'friends' or 'ai': ");
-        String opponentType = scanner.nextLine();
+        String opponentType;
+        do {
+            System.out.print("Enter 'friends' or 'ai': ");
+            opponentType = scanner.nextLine().toLowerCase();
+        } while (!opponentType.equals("friends") && !opponentType.equals("ai"));
 
         PlayerScoreManager scoreManager = new PlayerScoreManager();
         List<Player> players = new ArrayList<>();
 
         if (opponentType.equalsIgnoreCase("friends")) {
-            System.out.print("Enter the number of players: ");
-            int numPlayers = scanner.nextInt();
+            int numPlayers;
+            do {
+                System.out.print("Enter the number of players: ");
+                while (!scanner.hasNextInt()) {
+                    System.out.println("That's not a valid number.");
+                    System.out.println("Enter the number of players: ");
+                    scanner.next();
+                }
+                numPlayers = scanner.nextInt();
+            } while (numPlayers <= 0);
             scanner.nextLine();
 
             for (int i = 0; i < numPlayers; i++) {
@@ -40,22 +51,21 @@ public class App {
                 Player player = loadOrCreatePlayer(scoreManager, nickname);
                 players.add(player);
             }
-        } else if (opponentType.equalsIgnoreCase("ai")) {
+        } else {
             System.out.print("Enter your nickname: ");
             String nickname = scanner.nextLine();
             Player player = loadOrCreatePlayer(scoreManager, nickname);
             Player cpuPlayer = loadOrCreatePlayer(scoreManager, cpuPlayerNickname);
             players.add(player);
             players.add(cpuPlayer);
-        } else {
-            System.out.println("Invalid choice. Please enter 'friends' or 'ai'.");
-            return;
         }
 
         DifficultyLevel easy = new DifficultyLevel("Easy", 0, 100);
         DifficultyLevel normal = new DifficultyLevel("Normal", 0, 10000);
         DifficultyLevel hard = new DifficultyLevel("Hard", 0, 1000000);
         AdvancedDifficulty custom;
+        DifficultyLevel chosenDifficulty = null;
+        String tournamentType;
 
         System.out.println("Choose an option:");
         System.out.println("1. Play game");
@@ -65,7 +75,6 @@ public class App {
 
         if (option == 1) {
             Map<String, Supplier<Game>> gameModes = getStringSupplierMap(opponentType, players);
-
             System.out.println("Choose game mode:");
             int index = 1;
             List<String> gameModeKeys = new ArrayList<>(gameModes.keySet());
@@ -82,7 +91,6 @@ public class App {
             System.out.println("4. Custom");
             System.out.print("Enter your choice: ");
             int difficultyChoice = scanner.nextInt();
-            DifficultyLevel chosenDifficulty = null;
 
             if (difficultyChoice == 1) {
                 chosenDifficulty = easy;
@@ -97,14 +105,33 @@ public class App {
                 int upperBound = scanner.nextInt();
                 custom = new AdvancedDifficulty("Custom", lowerBound, upperBound);
                 chosenDifficulty = custom;
-            } else {
-                System.out.println("Invalid choice. Please enter 1 for Easy, 2 for Normal, 3 for Hard, or 4 for Custom.");
             }
 
-            Game game = gameModes.get(gameModeKeys.get(choice - 1)).get();
-            game.setDifficulty(chosenDifficulty);
-            game.startGame();
+            if (gameModeKeys.get(choice - 1).equals("Tournament")) {
+                int tournamentChoice;
+                do {
+                    System.out.println("Choose tournament type:");
+                    System.out.println("1. Best-of-one");
+                    System.out.println("2. Best-of-three");
+                    System.out.println("3. Best-of-five");
+                    System.out.print("Enter your choice: ");
+                    tournamentChoice = scanner.nextInt();
+                } while (tournamentChoice < 1 || tournamentChoice > 3);
 
+                tournamentType = switch (tournamentChoice) {
+                    case 1 -> "best-of-one";
+                    case 2 -> "best-of-three";
+                    case 3 -> "best-of-five";
+                    default -> throw new IllegalStateException("Invalid choice: " + tournamentChoice);
+                };
+
+                Game game = new TournamentGame(players, chosenDifficulty, tournamentType);
+                game.startGame();
+            } else {
+                Game game = gameModes.get(gameModeKeys.get(choice - 1)).get();
+                game.setDifficulty(chosenDifficulty);
+                game.startGame();
+            }
 
             for (Player player : players) {
                 scoreManager.savePlayer(player);
@@ -119,12 +146,13 @@ public class App {
     private static Map<String, Supplier<Game>> getStringSupplierMap(String opponentType, List<Player> players) {
         Map<String, Supplier<Game>> gameModes = new HashMap<>();
         if (opponentType.equalsIgnoreCase("ai")) {
-            gameModes.put("Standard game", () -> new ClassicGame(players.get(0), null));
-            gameModes.put("Reverse game", () -> new ReverseGame(players.get(0), null));
-            gameModes.put("Mixed game", () -> new MixedGame(players.get(0), null));
+            gameModes.put("Standard game", () -> new ClassicGame(players.getFirst(), null));
+            gameModes.put("Reverse game", () -> new ReverseGame(players.getFirst(), null));
+            gameModes.put("Mixed game", () -> new MixedGame(players.getFirst(), null));
         }
         if (opponentType.equalsIgnoreCase("friends")) {
             gameModes.put("Multiplayer game", () -> new MultiplayerGame(players, null));
+            gameModes.put("Tournament", () -> new TournamentGame(players, null, null));
         }
         return gameModes;
     }
@@ -139,22 +167,28 @@ public class App {
 
     public static void printPlayerStats(List<Player> players) {
         for (Player player : players) {
-            System.out.println("Stats for " + player.getNickname() + ":");
+            System.out.println("\nStats for player: " + player.getNickname());
+            System.out.println("Is the player a champion? " + (player.isChampion() ? "Yes" : "No"));
+            System.out.println("\nSingle player games:");
             for (Map.Entry<String, GameMode> entry : player.getSingle().entrySet()) {
-                System.out.println("Single " + entry.getKey() + ":");
+                System.out.println("  Game mode: " + entry.getKey());
                 for (Map.Entry<String, GameStats> statsEntry : entry.getValue().getDifficulty().entrySet()) {
-                    System.out.println("  Difficulty: " + statsEntry.getKey());
-                    System.out.println("    Record: " + statsEntry.getValue().getWins());
+                    System.out.println("    Difficulty level: " + statsEntry.getKey());
+                    System.out.println("      Wins: " + statsEntry.getValue().getWins());
+                    System.out.println("      Losses: " + statsEntry.getValue().getLoses());
+                    System.out.println("      Record: " + statsEntry.getValue().getWins());
                 }
             }
+            System.out.println("\nMultiplayer games:");
             for (Map.Entry<String, GameModeMulti> entry : player.getMulti().entrySet()) {
-                System.out.println("Multi " + entry.getKey() + ":");
+                System.out.println("  Game mode: " + entry.getKey());
                 for (Map.Entry<String, GameStats> statsEntry : entry.getValue().getDifficulty().entrySet()) {
-                    System.out.println("  Difficulty: " + statsEntry.getKey());
-                    System.out.println("    Wins: " + statsEntry.getValue().getWins());
-                    System.out.println("    Losses: " + statsEntry.getValue().getLoses());
+                    System.out.println("    Difficulty level: " + statsEntry.getKey());
+                    System.out.println("      Wins: " + statsEntry.getValue().getWins());
+                    System.out.println("      Losses: " + statsEntry.getValue().getLoses());
                 }
             }
         }
     }
+
 }
